fixed secret path and added env vars

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,6 +48,9 @@ jobs:
       - name: Use context
         run: kubectl config use-context arn:aws:eks:us-west-1:378255292555:cluster/interview-eks-5dIAHBlr
       - name: Run K8s commands
+        with:
+          TLS_CRT: ${{ secrets.TLS_CRT }}
+          TLS_KEY: ${{ secrets.TLS_KEY }}
         run: |
           ls -lah
           ./scripts/deploy-app.sh
