--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,8 +40,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-          TLS_CRT: ${{ secrets.TLS_CRT }}
-          TLS_KEY: ${{ secrets.TLS_KEY }}
       - name: Create kubeconfig
         run: |
           mkdir ${HOME}/.kube
@@ -49,7 +47,7 @@ jobs:
           cat ${HOME}/.kube/config
       - name: Use context
         run: kubectl config use-context arn:aws:eks:us-west-1:378255292555:cluster/interview-eks-5dIAHBlr
-      - name: Run K8s commands
+      - name: Run Deploy App Script
         run: |
           ls -lah
           export TLS_CRT=${{ secrets.TLS_CRT }}
